# MCSCS-Rust

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE.aria2.conf.txt  README.md
.github/workflows/: rust.yml
MCSCS/aria2c/: aria2c.conf  run.bat
MCSCS/aria2c/http_test/: get_version.http
aria2/: aria2.conf
src/: aria2c.rs  fastmirror.rs  java.rs  lib.rs  main.rs  mod.rs  select.rs  server.rs  test.rs  utils.rs
src/pages/: config.rs  create.rs  delete.rs  import.rs  init.rs  mod.rs  start.rs
src/tests/: downloads.rs  java.rs  mod.rs  pages.rs
tests/: aria2c.rs  dialoguer.rs  downloads.rs  files.rs  java.rs  keys.rs  lib.rs  pages.rs  server.rs  time.rs
