[package]
name = "mcscs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Arama <3584075812@qq.com>"]
description = "MCSCS powered by Rust"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
console = "0.15.8"
hex = "0.4.3"
indicatif = "0.17.8"
lazy_static = "1.4.0"
log = "0.4.20"
log4rs = "1.3.0"
rayon = "1.9.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.114"
sha1 = "0.10.6"
tokio = { version = "1.36.0", features = ["full"] }
