[package]
name = "mcscs"
version = "1.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Arama <3584075812@qq.com>"]
description = "MCSCS powered by Rust"
publish = ["crates-io"]
readme = "README.md"
repository = "https://gitee.com/Arama-Vanarana/minecraft-server-config-script-for-rust"

[dependencies]
chrono = "0.4.35"
console = "0.15.8"
dialoguer = "0.11.0"
hex = "0.4.3"
indicatif = "0.17.8"
jsonrpc = "0.17.0"
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
rayon = "1.9.0"
regex = "1.10.3"
reqwest = { version = "0.11.26", features = ["json"] }
serde_json = "1.0.114"
sha1 = "0.10.6"
sys-info = "0.9.1"
tokio = { version = "1.36.0", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
zip = "0.6.6"
